[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Pause.gd" type="Script" id=1]

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -40.0
margin_top = -56.0
margin_right = 1085.0
margin_bottom = 672.0
color = Color( 0, 0, 0, 0.439216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 20.0
margin_right = -40.0
margin_bottom = 68.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -280.0
margin_top = 148.0
margin_right = -40.0
margin_bottom = 196.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 20.0
margin_right = 288.0
margin_bottom = 68.0
text = "Full Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 48.0
margin_top = 148.0
margin_right = 288.0
margin_bottom = 196.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
